--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
     <version>1.0.1</version>
 </dependency>
 
+      <dependency>
+        <groupId>org.twdata.maven</groupId>
+        <artifactId>mojo-executor</artifactId>
+        <version>2.4.0</version>
+      </dependency>
+
   </dependencies>
 
   <build>
