--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
       <artifactId>jlayer</artifactId>
       <version>1.0.1</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.eclipse.jgit</groupId>
+      <artifactId>org.eclipse.jgit</artifactId>
+      <version>6.8.0.202311291450-r</version>
+    </dependency>
   </dependencies>
  
   <build>
