--- a/src/test/resources/project-to-test/pom.xml
+++ b/src/test/resources/project-to-test/pom.xml
@@ -14,7 +14,7 @@
     <plugins>
       <plugin>
         <groupId>com.RogaIKopytov</groupId>
-        <artifactId>demo-plugin-eclipse</artifactId>
+        <artifactId>rik-maven-plugin</artifactId>
         <configuration>
           <!-- Specify the MyMojo parameter -->
           <outputDirectory>target/test-harness/project-to-test</outputDirectory>
